<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/main_filmImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/header"
        android:adjustViewBounds="true"
        android:contentDescription="@string/main_film_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginStart="@dimen/margin">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/main_filmTitle"
            android:textColor="@color/black"
            android:textSize="@dimen/titleSize"
            android:layout_weight="4"/>

        <ImageView
            android:id="@+id/main_bookmark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin_2x"
            app:srcCompat="@drawable/ic_bookmark"
            android:contentDescription="@string/main_bookmarkDescription" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/main_filmSubtitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x">

        <Button
            android:id="@+id/main_squareBtn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_squareBtn_1"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/margin"/>

        <Button
            android:id="@+id/main_squareBtn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_squareBtn_2"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin"/>
    </LinearLayout>

    <View
        android:id="@+id/main_divider_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_2x" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_2x"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/main_roundBtn_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                app:srcCompat="@drawable/ic_baseline_edit_24"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/main_btnText_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/main_btnText_1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/main_roundBtn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@drawable/ic_family"
                app:tint="@color/white"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/main_btnText_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/main_btnText_2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/main_roundBtn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@drawable/tomato"
                app:tint="@color/white"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_btnText_3"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@drawable/ic_similar"
                app:tint="@color/white"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_btnText_4"
                android:layout_marginTop="@dimen/margin"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/main_divider_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_2x"
        android:text="@string/main_filmDescription"
        android:textSize="@dimen/filmDescription"/>
</LinearLayout>