<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/main_filmImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header" />

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:text="@string/main_filmTitle"
        android:textColor="@color/black"
        android:textSize="@dimen/titleSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_filmImage" />

    <TextView
        android:id="@+id/main_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/main_filmSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />

    <ImageView
        android:id="@+id/main_bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/margin_2x"
        android:contentDescription="@string/main_bookmarkDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_filmImage"
        app:layout_goneMarginTop="@dimen/margin_2x"
        app:srcCompat="@drawable/ic_bookmark" />

    <Button
        android:id="@+id/main_squareBtn_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_2x"
        android:text="@string/main_squareBtn_1"
        app:layout_constraintEnd_toStartOf="@+id/main_squareBtn_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_subtitle" />

    <Button
        android:id="@+id/main_squareBtn_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_2x"
        android:text="@string/main_squareBtn_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/main_squareBtn_1"
        app:layout_constraintTop_toBottomOf="@+id/main_subtitle" />

    <View
        android:id="@+id/main_divider_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_2x"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_squareBtn_1" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2x"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_divider_1"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        app:tint="@color/white"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2x"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton"
        app:layout_constraintTop_toBottomOf="@+id/main_divider_1"
        app:srcCompat="@drawable/ic_family"
        app:tint="@color/white"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2x"
        android:clickable="true"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton2"
        app:layout_constraintTop_toBottomOf="@+id/main_divider_1"
        app:srcCompat="@drawable/tomato"
        app:tint="@color/white"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2x"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton3"
        app:layout_constraintTop_toBottomOf="@+id/main_divider_1"
        app:tint="@color/white"
        app:srcCompat="@drawable/ic_similar" />

    <TextView
        android:id="@+id/main_btnTitle_1"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/main_btnText_1"
        app:layout_constraintEnd_toStartOf="@+id/main_btnTitle_2"
        app:layout_constraintHorizontal_bias="0.5"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton" />

    <TextView
        android:id="@+id/main_btnTitle_2"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/main_btnText_2"
        app:layout_constraintEnd_toStartOf="@+id/main_btnTitle_3"
        app:layout_constraintHorizontal_bias="0.5"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/main_btnTitle_1"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton2" />

    <TextView
        android:id="@+id/main_btnTitle_3"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/main_btnText_3"
        app:layout_constraintEnd_toStartOf="@+id/main_btnTitle_4"
        app:layout_constraintHorizontal_bias="0.5"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/main_btnTitle_2"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton3" />

    <TextView
        android:id="@+id/main_btnTitle_4"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/main_btnText_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:textAlignment="center"
        app:layout_constraintStart_toEndOf="@+id/main_btnTitle_3"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton5" />

    <View
        android:id="@+id/main_divider_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/margin_2x"
        app:layout_constraintTop_toBottomOf="@+id/main_btnTitle_1" />

    <TextView
        android:id="@+id/main_filmDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/main_filmDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_divider_2"
        android:layout_marginTop="@dimen/margin_2x"
        android:layout_marginStart="@dimen/margin_2x"
        android:layout_marginEnd="@dimen/margin_2x"
        android:layout_marginBottom="@dimen/margin_2x"
        android:textSize="@dimen/filmDescription"/>


</androidx.constraintlayout.widget.ConstraintLayout>